tests/snapshots/golden_edge_case_tests__ec02_component.snap
---
source: tests/golden_edge_case_tests.rs
expression: normalize_for_comparison(&component_output)
---
{
  "component-definition": {
    "components": [
      {
        "control-implementations": [
          {
            "description": "Implementation narratives derived from Control Statements.",
            "implemented-requirements": [
              {
                "control-id": "POL-CS-001",
                "description": "Systems must encrypt data at rest",
                "links": [
                  {
                    "href": "input.md#line=3",
                    "rel": "source"
                  }
                ],
                "props": [
                  {
                    "name": "source-file",
                    "ns": "https://forge.policy-forge.github.io/ns/trace",
                    "value": "input.md"
                  },
                  {
                    "name": "source-section",
                    "ns": "https://forge.policy-forge.github.io/ns/trace",
                    "value": "Control Statements"
                  },
                  {
                    "name": "source-line",
                    "ns": "https://forge.policy-forge.github.io/ns/trace",
                    "value": "3"
                  },
                  {
                    "name": "modality",
                    "value": "normative"
                  }
                ],
                "uuid": "00000000-0000-0000-0000-000000000000"
              },
              {
                "control-id": "POL-CS-002",
                "description": "Systems must encrypt data in transit.",
                "links": [
                  {
                    "href": "input.md#line=3",
                    "rel": "source"
                  }
                ],
                "props": [
                  {
                    "name": "source-file",
                    "ns": "https://forge.policy-forge.github.io/ns/trace",
                    "value": "input.md"
                  },
                  {
                    "name": "source-section",
                    "ns": "https://forge.policy-forge.github.io/ns/trace",
                    "value": "Control Statements"
                  },
                  {
                    "name": "source-line",
                    "ns": "https://forge.policy-forge.github.io/ns/trace",
                    "value": "3"
                  },
                  {
                    "name": "modality",
                    "value": "normative"
                  }
                ],
                "uuid": "00000000-0000-0000-0000-000000000000"
              },
              {
                "control-id": "POL-CS-003",
                "description": "Systems must retain audit logs for at least one year.",
                "links": [
                  {
                    "href": "input.md#line=4",
                    "rel": "source"
                  }
                ],
                "props": [
                  {
                    "name": "source-file",
                    "ns": "https://forge.policy-forge.github.io/ns/trace",
                    "value": "input.md"
                  },
                  {
                    "name": "source-section",
                    "ns": "https://forge.policy-forge.github.io/ns/trace",
                    "value": "Control Statements"
                  },
                  {
                    "name": "source-line",
                    "ns": "https://forge.policy-forge.github.io/ns/trace",
                    "value": "4"
                  },
                  {
                    "name": "modality",
                    "value": "normative"
                  }
                ],
                "uuid": "00000000-0000-0000-0000-000000000000"
              }
            ],
            "source": "tests/fixtures/edge-cases/source-profile.json",
            "uuid": "00000000-0000-0000-0000-000000000000"
          }
        ],
        "description": "Documentary component representing the Control Statements policy document.",
        "props": [
          {
            "name": "source-file",
            "ns": "https://forge.policy-forge.github.io/ns/trace",
            "value": "input.md"
          }
        ],
        "title": "Control Statements",
        "type": "policy",
        "uuid": "00000000-0000-0000-0000-000000000000"
      }
    ],
    "metadata": {
      "last-modified": "2026-01-01T00:00:00Z",
      "oscal-version": "1.2.0",
      "title": "Control Statements",
      "version": "0.0.0"
    },
    "uuid": "00000000-0000-0000-0000-000000000000"
  }
}
